# yesod-auth-fb

./: yesod-auth-facebook.cabal  yesod-auth-fb.cabal
demo/: clientside.hs
include/: qq.h
src/Yesod/Auth/: FB.hs  Facebook.hs
src/Yesod/Auth/Facebook/: ClientSide.hs  ServerSide.hs
