Name:                yesod-auth-facebook
Version:             0.0
Synopsis:            Authentication backend for Yesod using Facebook.
Homepage:            https://github.com/meteficha/yesod-auth-facebook
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa
Maintainer:          felipe.lessa@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Description:
  This package allows you to use Yesod's authentication framework
  with Facebook as your backend.  That is, your site's users will
  log in to your site through Facebook.

-- Extra-source-files:

Library
  -- Exposed-modules:
  -- Build-depends:
  -- Other-modules:
  -- Build-tools:
