Name:                yesod-auth-fb
Version:             0.0
Synopsis:            Authentication backend for Yesod using Facebook.
Homepage:            https://github.com/meteficha/yesod-auth-fb
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa, Michael Snoyman
Maintainer:          Felipe Lessa <felipe.lessa@gmail.com>
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.6
Extra-source-files:  include/qq.h

Description:
  This package allows you to use Yesod's authentication framework
  with Facebook as your backend.  That is, your site's users will
  log in to your site through Facebook.  Your application need to
  be registered on Facebook.

Source-repository head
  type:     git
  location: git://github.com/meteficha/yesod-auth-fb.git

flag ghc7

Library
  if flag(ghc7)
    Cpp-options:   -DGHC7
    Build-depends: base         >= 4.3    && < 5
  else
    Build-depends: base         >= 4      && < 4.3

  Build-depends:   yesod-core   >= 0.9    && < 0.10
                 , yesod-auth   >= 0.7    && < 0.8
                 , wai
                 , http-conduit
                 , fb           >= 0.5    && < 0.6

                 , bytestring              >= 0.9.1.4   && < 0.10
                 , template-haskell
                 , control-monad-attempt   >= 0.3.0     && < 0.4
                 , text                    >= 0.7       && < 0.12
                 , blaze-html              >= 0.4.1.3   && < 0.5
                 , yesod-persistent        >= 0.2       && < 0.3
                 , hamlet                  >= 0.10      && < 0.11
                 , containers
                 , unordered-containers
                 , yesod-form              >= 0.3       && < 0.4
                 , transformers            >= 0.2.2     && < 0.3
                 , persistent              >= 0.6       && < 0.7
                 , persistent-template     >= 0.6       && < 0.7
                 , pwstore-fast            >= 2.2       && < 3

  Exposed-modules: Yesod.Auth.FB
  Extensions: QuasiQuotes CPP OverloadedStrings
  GHC-options: -Wall
  Include-dirs: include
